--- a/poloaquatico.pt/package.json
+++ b/poloaquatico.pt/package.json
@@ -1,6 +1,7 @@
 {
   "name": "poloaquatico.pt",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
