Artigos e noticias ok

--- a/poloaquatico.pt/package.json
+++ b/poloaquatico.pt/package.json
@@ -4,17 +4,16 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@react-firebase/firestore": "^0.5.5",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.16.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
