--- a/poloaquatico.pt/package.json
+++ b/poloaquatico.pt/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "@react-firebase/firestore": "^0.5.5",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "firebase": "^7.16.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-transition-group": "^4.4.1"
